--- a/M4-Bootstrap-temp/css/styles.css
+++ b/M4-Bootstrap-temp/css/styles.css
@@ -1,165 +1,305 @@
+@charset "UTF-8";
 * {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
-}
-#main-navbar.bg-dark {
-	background-color: #121212 !important;
-}
-#navbar-row-1 .btn-secondary {
-	background-color: #121212;
-	color: #898989;
-}
-#navbar-row-1 .btn-secondary:hover,
-#navbar-row-1 .nav-link:hover {
-	color: goldenrod;	
-}
-#navbar-row-1-links .navbar-nav {
-	display: inline-flex;
-	flex-direction: row;
-}
-body {
-/* background-color: #fafafa; */
-/* background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%23343a40' fill-opacity='0.4' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E"); */
+  /* Border y Padding incluídos en los width y height */
+  box-sizing: border-box; }
 
-/* background-color: #343a40; */
-/* background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%23daa520' fill-opacity='0.52' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E"); */
-	background-image: url(/img/background.jpg);
-	/* Create the parallax scrolling effect */
-	background-attachment: fixed;
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-}
+body {
+  color: black;
+  background-image: url("/img/background.jpg");
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh; }
+
+html {
+  height: 100vh; }
+
+/*---- SCROLLBAR ----*/
+.custom-scroll-bar::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+  background-color: #121212; }
+.custom-scroll-bar::-webkit-scrollbar-thumb {
+  background: goldenrod;
+  border-radius: 20px;
+  background-clip: content-box; }
+
 /*---- MAIN NAVBAR ----*/
 #main-navbar {
-	padding-bottom: 0.2rem;
-}
-#main-navbar .container {
-	padding: 0;
-	flex-wrap: wrap;
-}
+  padding-bottom: 0.2rem; }
+  #main-navbar.bg-dark {
+    background-color: #121212 !important; }
+  #main-navbar .container-md {
+    padding: 0;
+    flex-wrap: wrap; }
+  #main-navbar .dropdown-menu {
+    background-color: #2a2a2a; }
+    #main-navbar .dropdown-menu .dropdown-item {
+      color: #ffffff; }
+      #main-navbar .dropdown-menu .dropdown-item:hover {
+        background-color: #191919;
+        color: goldenrod; }
+  #main-navbar #cartLink {
+    white-space: nowrap; }
+  #main-navbar .badge-cart-count {
+    position: relative;
+    top: -15px;
+    left: -15px;
+    background-color: #E30612;
+    color: #f2f2f2; }
+  #main-navbar #navbar-row-1 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: stretch;
+    width: 100%; }
+    #main-navbar #navbar-row-1 .btn-navbar-search-field {
+      background-color: #121212;
+      color: #898989; }
+      #main-navbar #navbar-row-1 .btn-navbar-search-field:hover {
+        color: goldenrod; }
+    #main-navbar #navbar-row-1 #navbar-search-form {
+      order: 1;
+      width: 100%; }
+    #main-navbar #navbar-row-1 .navbar-row-item {
+      text-align: center;
+      align-self: center; }
+    #main-navbar #navbar-row-1 #navbar-row-1-links .navbar-nav {
+      display: inline-flex;
+      flex-direction: row; }
+    #main-navbar #navbar-row-1 #navbar-row-1-links .nav-item .nav-link {
+      padding-right: .5rem;
+      padding-left: .5rem; }
+      #main-navbar #navbar-row-1 #navbar-row-1-links .nav-item .nav-link:hover {
+        color: goldenrod; }
+    #main-navbar #navbar-row-1 #navbar-row-1-links .nav-item .fa {
+      font-size: 1.5rem; }
+    #main-navbar #navbar-row-1 #navbar-row-1-links .dropdown-menu {
+      position: absolute; }
+  #main-navbar #navbar-row-2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%; }
+    #main-navbar #navbar-row-2 .nav-item {
+      flex-grow: 1;
+      text-align: center;
+      width: 100%; }
+      #main-navbar #navbar-row-2 .nav-item .nav-link {
+        display: inline-block;
+        border-bottom: medium solid transparent;
+        padding-bottom: unset; }
+        #main-navbar #navbar-row-2 .nav-item .nav-link:hover {
+          border-bottom: medium solid goldenrod; }
+      #main-navbar #navbar-row-2 .nav-item.active
+      .nav-link {
+        color: goldenrod;
+        border-bottom: medium solid goldenrod; }
 
-/* Dropdowns */
-#navbar-row-1-links .dropdown-menu {
-	position: absolute;
-}
-#main-navbar .dropdown-menu {
-	background-color: #5A6268;
-	background-color: #2a2a2a
-}
-#main-navbar .dropdown-menu .dropdown-item {
-color: #ffffff;
-}
+@media (min-width: 992px) {
+  /*---- MAIN NAVBAR ----*/
+  #main-navbar #navbar-row-1 {
+    flex-wrap: nowrap; }
+    #main-navbar #navbar-row-1 #navbar-search-form {
+      order: 0;
+      flex-grow: 1;
+      flex-basis: auto; } }
+.card.showcase {
+  margin: 1.5rem 0; }
+  .card.showcase .card-body {
+    min-height: 300px; }
+    .card.showcase .card-body .book-item {
+      color: #000000;
+      padding: 0.5rem;
+      max-width: 11rem;
+      margin: auto;
+      display: flex;
+      flex-direction: column;
+      align-content: stretch;
+      align-items: stretch;
+      justify-content: flex-start; }
+      .card.showcase .card-body .book-item a:not(.btn) {
+        color: inherit; }
+      .card.showcase .card-body .book-item .book-img {
+        max-width: 15rem;
+        max-width: 10rem;
+        height: 12rem; }
+        .card.showcase .card-body .book-item .book-img a {
+          position: relative;
+          display: inline-block;
+          height: 100%;
+          max-width: 100%; }
+        .card.showcase .card-body .book-item .book-img img {
+          max-height: 100%;
+          margin: 0 auto;
+          vertical-align: middle; }
+        .card.showcase .card-body .book-item .book-img .savings-tag {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 4rem;
+          padding: 0rem 0.2rem;
+          z-index: 1;
+          color: #ffffff;
+          font-weight: bold;
+          pointer-events: none;
+          font-size: 0.8rem;
+          text-align: left; }
+        .card.showcase .card-body .book-item .book-img .savings-tag:before {
+          content: "";
+          width: 0;
+          height: 0;
+          position: absolute;
+          top: 0;
+          left: 0;
+          border-style: solid;
+          border-width: 4rem 4rem 0 0;
+          border-color: #E30612 transparent transparent transparent;
+          z-index: -1; }
+      .card.showcase .card-body .book-item .book-info {
+        display: inline-block;
+        width: 100%;
+        font-size: 0.9rem;
+        padding: 0 0.2rem; }
+        .card.showcase .card-body .book-item .book-info h3.title {
+          font-size: 1rem;
+          line-height: 1.2rem;
+          padding-top: .15rem;
+          padding-bottom: .15rem;
+          height: 2.75rem;
+          min-height: 2.75rem;
+          max-width: 15rem;
+          max-width: 10rem;
+          overflow: hidden;
+          margin: 0;
+          width: 100%; }
+          .card.showcase .card-body .book-item .book-info h3.title:hover {
+            height: auto;
+            overflow: visible; }
+        .card.showcase .card-body .book-item .book-info .author {
+          margin: 0;
+          width: 100%;
+          font-size: 0.9rem;
+          color: #4d4d4d;
+          height: 1.75rem;
+          max-width: 15rem;
+          max-width: 10rem;
+          overflow: hidden; }
+          .card.showcase .card-body .book-item .book-info .author a {
+            border-bottom: 1px dotted #aaaaaa; }
+            .card.showcase .card-body .book-item .book-info .author a:hover {
+              text-decoration: none;
+              border-bottom: 1px solid #4d4d4d; }
+        .card.showcase .card-body .book-item .book-info .price-wrap {
+          white-space: nowrap;
+          -webkit-align-self: flex-end;
+          -ms-flex-item-align: end;
+          align-self: flex-end;
+          width: 100%;
+          height: 3rem; }
+          .card.showcase .card-body .book-item .book-info .price-wrap .price {
+            margin: 0;
+            width: 100%;
+            font-size: 1.25rem;
+            line-height: 1.25rem;
+            padding-top: 0rem;
+            white-space: nowrap;
+            color: #E30612; }
+            .card.showcase .card-body .book-item .book-info .price-wrap .price .rrp {
+              font-size: 0.9rem;
+              text-decoration: line-through;
+              color: #999999; }
+          .card.showcase .card-body .book-item .book-info .price-wrap .price-save {
+            margin: 0;
+            width: 100%;
+            font-style: italic;
+            font-size: 0.9rem;
+            color: #333333; }
+.card.big-categories {
+  background-color: transparent;
+  color: #000000; }
+  .card.big-categories a {
+    color: inherit; }
+  .card.big-categories .card-body {
+    padding: 0;
+    display: flex; }
+  .card.big-categories .big-category {
+    padding: 0 .75rem; }
+    .card.big-categories .big-category:first-of-type {
+      padding-left: 0; }
+    .card.big-categories .big-category:last-of-type {
+      padding-right: 0; }
+  .card.big-categories .big-category-item {
+    display: block;
+    min-height: 7rem;
+    background: #ffffff;
+    margin: 0;
+    padding: 0.75rem;
+    border-radius: 0.25rem; }
+    .card.big-categories .big-category-item .fa-stack .icon-background {
+      color: goldenrod; }
+    .card.big-categories .big-category-item:hover .grow {
+      transform: scale(1.2); }
+    .card.big-categories .big-category-item .grow {
+      transition: all .2s ease-in-out; }
+  .card.big-categories .big-category-title {
+    margin: 0; }
 
-#main-navbar .dropdown-item:hover {
-	background-color: #343a40;
-	background-color: #191919;
-	color: goldenrod;
-}
+.rating-wrap {
+  display: block; }
+  .rating-wrap .stars {
+    display: inline-block; }
+  .rating-wrap .star {
+    position: relative;
+    top: 0px;
+    display: block;
+    float: left;
+    height: 1.4rem;
+    width: 1.4rem;
+    font-size: 1.4rem; }
+    .rating-wrap .star:before {
+      color: #cccccc;
+      position: absolute;
+      left: 0;
+      overflow: hidden;
+      top: -0.3em;
+      float: none;
+      font-size: 1.10em;
+      content: "🟊"; }
+    .rating-wrap .star:after {
+      color: #cccccc;
+      position: absolute;
+      left: 0;
+      overflow: hidden;
+      top: -0.3em; }
+    .rating-wrap .star.half-star:before {
+      color: #fed221;
+      width: 50%; }
+    .rating-wrap .star.half-star:after {
+      width: 50%;
+      left: .7rem;
+      text-indent: -.7rem;
+      float: none;
+      font-size: 1.10em;
+      content: "🟊"; }
+    .rating-wrap .star.full-star:before {
+      color: #fed221; }
 
-/* FlexBox 1º fila del navegador */
-#navbar-row-1 {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
-	align-items: stretch;
-	width: 100%;
-}
+.carousel-control-prev {
+  width: auto;
+  padding: 0.5rem;
+  max-height: 23rem;
+  left: -1rem; }
+  .carousel-control-prev .carousel-control-prev-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5L4.25 4l2.5-2.5L5.25 0z'/%3e%3c/svg%3e"); }
 
-/* FlexBox 2º fila del navegador */
-#navbar-row-2 {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	width: 100%;
-}
-
-/* Search Form del navegador en su propia fila */
-#navbar-row-1 #navbar-search-form {
-	order: 1;
-	width: 100%;
-}
-
-/* Alineación horizontal y vertical de los elementos del navegador */
-#navbar-row-1 .navbar-row-item,
-#navbar-row-2 .nav-item {
-	text-align: center;
-	align-self: center;
-}
-
-/* Alineación "flexbox" de los items de la 2ª fila del navegador */
-#navbar-row-2 .nav-item {
-	flex-grow: 1;
-	text-align: center;
-	width: 100%;
-}
-
-#navbar-row-2 .nav-item .nav-link {
-	display: inline-block;
-	border-bottom: medium solid transparent;
-	padding-bottom: unset;
-}
-#navbar-row-2 .nav-item .nav-link:hover {
-	border-bottom: medium solid goldenrod;
-}
-#navbar-row-2 .nav-item.active .nav-link {
-	color: goldenrod;
-	border-bottom: medium solid goldenrod;
-}
-
-/* A los links de la 1ª fila del navegador (user/cart), le dejamos el padding que le quita Bootstrap a los nav-links */
-#navbar-row-1-links .nav-item .nav-link {
-	padding-right: .5rem;
-	padding-left: .5rem;
-}
-
-
-
-
-/* Small devices (landscape phones, 576px and up) */
-@media(min-width:576px) {
-	.navbar-expand-sm .input-group-search {
-	   /* width: 100% !important;  */
-	}
-}
-
-/* Medium devices (tablets, 768px and up) */
-@media(min-width:768px) {
-	.navbar-expand-md .input-group-search {
-	   /* width: 90% !important;  */
-	}
-
-}
-
-/* Large devices (desktops, 992px and up) */
-@media(min-width:992px) {
-	.navbar-expand-lg .input-group-search {
-	   /* width: 80% !important;  */
-	}
-	/*body {
-	   padding-top: 110px;
-	}*/
-	/*---- MAIN NAVBAR ----*/
-	/* Mostrar la 1ª fila del navegador unida (sin el wrap) */
-	#navbar-row-1 {
-		flex-wrap: nowrap;
-	}
-	/* Devolver el buscador en su posición según HTML (misma fila que el logo y los links "right" de la 1ª fila del navegador */
-	#navbar-row-1 #navbar-search-form {
-		order: 0;
-		flex-grow: 1;
-		flex-basis: auto;
-	}
-	/* #navbar-row-1-links .nav-item {
-		padding-right: unset;
-		padding-left: unset;
-	} */
-}
-
-/* Extra large devices (large desktops, 1200px and up) */
-@media(min-width:1200px) {
-	.navbar-expand-xl .input-group-search {
-	   width: 70% !important; 
-	}
-}
+.carousel-control-next {
+  width: auto;
+  padding: 0.5rem;
+  max-height: 23rem;
+  right: -1rem; }
+  .carousel-control-next .carousel-control-next-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5L3.75 4l-2.5 2.5L2.75 8l4-4-4-4z'/%3e%3c/svg%3e");
+    right: -1rem; }
