Correcciones para que funcione en Github

--- a/M4-Bootstrap/sass/_variables.scss
+++ b/M4-Bootstrap/sass/_variables.scss
@@ -13,7 +13,7 @@ $default-font-family: 'Lato';
 $default-color: black;
 $defaul-dark-color: #121212;
 $default-highlight-color: goldenrod;
-$bg-image: 'img/background.jpg';
+$bg-image: '../img/background.jpg';
 
 // ScrollBar
 $scrollBar-width: 8px;
