--- a/M4-Bootstrap/sass/_variables.scss
+++ b/M4-Bootstrap/sass/_variables.scss
@@ -69,3 +69,15 @@ $big-category-icon-background-color: goldenrod;
 // Carousel
 $carousel-control-color: "000"; // En formato hex de 3 cifras
 // ------------- C A R D S (fin) -------------
+
+// ------------- M O D A L S (ini) -------------
+$modal-dark-bg-color: #393939;
+$modal-dark-color: #898989;
+$modal-dark-link-color: $default-highlight-color;
+$modal-dark-header-color: #fafafa;
+$modal-dark-btn-bg-color: #121212;
+$modal-dark-btn-color: #898989;
+$modal-dark-btn-color-highlight: $default-highlight-color;
+$modal-icon-in-field-color: #121212;
+$modal-footer-bg-color: #121212;
+// ------------- M O D A L S (fin) -------------
